# smartlogistics

./: .replit  README.md  app.py  check_env.py  pyproject.toml  replit.nix
data/: mock_shipments.py
data/notifications/: demo_user.json
pages/: 1_shipment_tracking.py  2_predictions.py  3_route_optimization.py  4_analytics.py  5_notification_settings.py
utils/: data_utils.py  export_utils.py  llm_utils.py  ml_utils.py  notification_utils.py  viz_utils.py  weather_utils.py
